# CommandCenter

./: README.md  pyproject.toml
.github/workflows/: ci.yml
CommandCenter/: config.py  manage.py
CommandCenter/CommandCenter/: asgi.py  config.py  settings.py  test_settings.py  urls.py  wsgi.py
CommandCenter/ExternalModules/LCD_Module_RPI_code_2inch/: WaveshareLCD.py
CommandCenter/TestApp/: apps.py  urls.py  views.py
CommandCenter/TestApp/migrations/: 0001_initial.py
CommandCenter/TestApp/templates/TestApp/: product_list.html
CommandCenter/mainApp/: urls.py  views.py
CommandCenter/mainApp/static/styles/: styles.css
CommandCenter/mainApp/templates/mainApp/: home.html  layout.html
CommandCenter/mainApp/tests/: test_views.py
CommandCenter/pigeonDeterrent/: admin.py  apps.py  models.py
CommandCenter/pigeonDeterrent/migrations/: 0001_initial.py
CommandCenter/pigeonInterrupts/: admin.py  apps.py  models.py  urls.py  views.py
CommandCenter/pigeonInterrupts/migrations/: 0001_initial.py
CommandCenter/pigeonInterrupts/templates/pigeonInterrupts/: home.html  layout.html  pigeon_interrupt_delete.html  pigeon_interrupt_list.html
CommandCenter/pigeonInterrupts/tests/: test_models.py  test_views.py
CommandCenter/routers/: db_routers.py
CommandCenter/weatherApp/: admin.py  apps.py  cron.py  forms.py  models.py  urls.py  views.py
CommandCenter/weatherApp/logic/: controller.py  display_interfaces.py  logic.py  temperature_sensor.py
CommandCenter/weatherApp/management/commands/: temperature_measurements.py
CommandCenter/weatherApp/migrations/: 0001_initial.py  0002_alter_weatherconditions_additional_info.py
CommandCenter/weatherApp/templates/weatherApp/: home.html  layout.html  weather_conditions_create.html  weather_conditions_delete.html  weather_conditions_list.html
CommandCenter/weatherApp/tests/: test_commands.py  test_forms.py  test_models.py  test_views.py
CommandCenter/weatherApp/tests/test_logic/: test_controller.py  test_display_interfaces.py  test_temperature_sensor.py
