[tool.poetry]
name = "CommandCenter"
version = "0.1.0"
description = ""
authors = ["JakubStyczen <styczen37@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
django = "*"
django-crispy-forms = "*"
crispy-bootstrap5 = "*"
djongo = "1.3.6"
pytz = "^2024.2"
pymongo = "3.12.3"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
